updated text and order of analysis

--- a/two/report/Assignment2_Group4.tex
+++ b/two/report/Assignment2_Group4.tex
@@ -183,41 +183,43 @@ The implementation consists of the following files:
 	\item[Other\_objects] \hfill \\ % uncertain about policy class description
 	This file contains the Policy and Environment classes. The environment of the game as well as the rules are implemented in the Environment class. The Policy class contains the implementation of Q-Learning, Sarsa, $\epsilon$-greedy, softmax action selection and more functions that help in determining and optimizing a policy as well as choosing an action of this policy.
 	\item[Newstate] \hfill \\ 
-	This file contains the Game class as well as a demonstration function. The Game class instantiates the game, initialized the predator and the prey and assigns policies to these. The game is run N times and the result is printed. The demonstration function also performs Q-Learning, Sarsa and Monte Carlo. It also uses $\epsilon$-greedy and softmax action selection. The results are printed in the command line and graphs are used for analyzation.
+	This file contains the Game class as well as a demonstration function. The Game class instantiates the game, initialized the predator and the prey and assigns policies to these. The game is run N times and the result is printed. The demonstration function also performs Q-Learning, Sarsa and Monte Carlo. It also uses $\epsilon$-greedy and softmax action selection. The results are printed in the command line and graphs are used for analysis.
 \end{description}
 \pagebreak
 \section*{Analysis}
-This section discusses the results of the implementations.
+This section discusses the results of the implementations. In order to display and compare results, graphs are used. The title describes which parameters are analysed and the legend shows which color represents which setting of said parameters.
+
 \subsection*{Q-Learning}
-First, let's have a look at the effect of different discount factors on Q-learning. This is displayed in the figure below.
 
-\begin{figure}[h!]
+\subsubsection*{Different discount factors}
+First, the effects of different discount factors on Q-learning is analysed. The results are displayed in the figure below.
+
 \begin{center}
-
-\includegraphics[scale=0.4]{discount_factors}
-\caption{Q-learning using different discount factors}
+	\includegraphics[scale=0.4]{discount_factors}
+	\captionof{figure}{Q-learning using different discount factors}
 \end{center}
 
-\end{figure}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.4]{discount_factors}
+%\caption{Q-learning using different discount factors}
+%\end{center}
+%\end{figure}
 
 As shown, the higher the discount factor, the better the result. The height of the discount factor determines the importance of future rewards. A low discount rate tries to achieve a high immediate reward and a high discount rate tries to achieve a high overall reward. Since reaching each state yields a reward of 0, except for the goal state which yields a reward of 10, the future reward must be maximized. Therefore, this behaviour can be expected. 
-\\
-\\
 
-Now let's analyse the effect of epsilon in the $\epsilon$-greedy algorithm. 
+\subsubsection*{The effect of $\epsilon$}
+As Q-learning is a learning algorithm, exploration and exploitation must be balanced well to find the optimal behaviour. The following graph shows different settings for $\epsilon$. 
 
 \begin{center}
 	\includegraphics[scale=0.4]{epsilons}
 	\captionof{figure}{Q-learning using different epsilon values}
 \end{center}
 
+As shown in the figure above, the lower the $\epsilon$ value is, the quicker the algorithm finds the optimal path. This can be expected since, as stated in the theory, an $\epsilon$ value of 0 leads to a greedy algorithm. What is interesting is that an $\epsilon$ value of 0.9 performs quite well compared to a completely exploratory policy, which seems to lead to random results. This shows how important explorations is and how strong an $\epsilon$-greedy policy is. Even with the slightest bit of greedy behaviour, good results are achieved.
 
-
-As shown in the figure above, the lower the $\epsilon$ value is, the quicker the algorithm finds the optimal path. This can be expected since, as stated in the theory, an $\epsilon$ value of 0 leads to a greedy algorithm. What is interesting is that an $\epsilon$ value of 0.9 performs quite well compared to a completely exploratory policy, which seems to lead to completely random results. This shows how strong an $\epsilon$-greedy policy is. Even with the slightest bit of greedy behaviour, good results will be achieved.
-
-
-
-Now let's analyse the effect of learning rates. 
+\subsubsection*{Different learning rates}
+It is possible to set different learning rates in Q-learning. The learning rate determines to which extent the new information will overwrite the old information. The following graph shows how important the relationship of old and new information is to achieve an optimal policy.
 
 \begin{center}
 	\includegraphics[scale=0.4]{learning_rates}
@@ -232,26 +234,39 @@ Now let's analyse the effect of learning rates.
 %\end{center}
 %\end{figure}
 
-The figure above shows that for each learning rate between, and including, 0.1 and 0.5 leads to conversion. However, a low conversion rate leads to slower conversion than a high conversion rate. It is interesting to note that the learning rates of both 0.4 and 0.5 appear to converge at about the same speed. The learning rate determines to which extent the new information will overwrite the old information. It appears that, even when storing little new data, this leads to convergence. The more new data overwrites the old data the quicker the algorithm converges. This seems to be correct. However, overwriting all old data might lead to less than optimal behaviour. As stated before, learning rates of 0.4 and 0.5 seem to yield the same result. It is well possible that this is the limit until which the learning rate factor is beneficial to the algorithm. As this lies beyond the scope of this analysis, this can be researched in the future.
+The figure above shows that for each learning rate between, and including, 0.1 and 0.5 leads to conversion. However, a low conversion rate leads to slower conversion than a high conversion rate. It is interesting to note that the learning rates of both 0.4 and 0.5 appear to converge at about the same speed. Remember that the learning rate determines to which extent the new information will overwrite the old information. It appears that, even when storing little new data, this leads to convergence. The more new data overwrites the old data the quicker the algorithm converges. Intuitively, this seems to be correct. However, overwriting all old data might lead to less than optimal behaviour. As stated before, learning rates of 0.4 and 0.5 seem to yield the same result. It is well possible that this is the limit until which the learning rate factor is beneficial to the algorithm. As this lies beyond the scope of this report, this can be researched in the future.
 
-\subsection*{Learning types}
-Aside from Q-learning, Sarsa and on-policy Monte Carlo were implemented. The results are shown in the figure below.
+\subsubsection*{Different initialization for Q-learning}
+It was advised to initialize the policy of the predator optimistically, when performing Q-learning. When initializing a policy optimistically, it is interesting to see what happens when a policy is not optimistically initialized. The values chosen are 15, 10, 5, 0 and -5. Also, to see the effect of learning, the $\epsilon$-value was set to either 0 or 0.1. The figure below shows the results of $\epsilon$ value 0.1.
 
 \begin{center}
-	\includegraphics[scale=0.4]{learning_types}
-	\captionof{figure}{Different learning types set out against one another}
+	\includegraphics[scale=0.4]{q_learnin_diff_init_epsilon_0_1}
+	\captionof{figure}{Q-learning with different policy initialization values and $\epsilon$ is 0.1}
 \end{center}
+
+Each non-negative initialization appears to yield good results. Though it takes an initialization of 0 longer to converge, the policy does eventually converge to the same level as the optimistic policy. The negatively initialized policy behaves very poor. It does improve, but it takes significantly longer to converge than the non-negative initialized policies.
 
 %\begin{figure}[h]
 %\begin{center}
-
-%\includegraphics[scale=0.4]{learning_types}
-%\caption{Different learning types set out against one another}
+%\includegraphics[scale=0.4]{q_learnin_diff_init_epsilon_0_1}
+%\caption{Q-learning with different initialization values and $\epsilon$ is 0.1}
 %\end{center}
 %\end{figure}
-The figure shows that all algorithms converge. Q-learning and Sarsa both converge with almost the same speed. On-policy Monte Carlo also converges quickly, but it starts with the worst Q-values. It also shows that of all algorithms, on-policy Monte Carlo performs worst. %explain why
-%\subsection*{Sarsa}
-\subsection*{$\epsilon$-greedy vs. softmax}
+
+Now let's analyse the same initialization values with an $\epsilon$-value of 0.
+\begin{center}
+	\includegraphics[scale=0.4]{q_learning_diff_init_epsilon_0}
+	\captionof{figure}{Q-learning with different initialization values and $\epsilon$ is 0}
+\end{center}
+This leads to similar results as before. One of the differences is that the policy initialized with 0 performs slightly worse than before. Also, the negatively initialized policy does not converge. 
+%\begin{figure}[h]
+%\begin{center}
+%\includegraphics[scale=0.4]{q_learning_diff_init_epsilon_0}
+%\caption{Q-learning with different initialization values and $\epsilon$ is 0}
+%\end{center}
+%\end{figure}
+
+\subsubsection*{$\epsilon$-greedy vs. softmax}
 As the effect of $\epsilon$-greedy action selection on Q-learning has already been discussed, let's analyse the effect of softmax action value selection. 
 % Explain that smaller grid takes longer to converge, since the predator is more likely to catch the prey, so it takes more rounds to actually explore enough. On the other hand, in a bigger grid the predator is highly unlikely to catch the prey, so it would explore a lot even in one round by the time it catches the prey.
 
@@ -260,6 +275,7 @@ As the effect of $\epsilon$-greedy action selection on Q-learning has already be
 	\captionof{figure}{Q-learning using different temperatures in Soft-max}
 \end{center}
 
+The graph shows that all results converge. It shows that the lower the temperature, the better the results. % explain why and all
 %\begin{figure}[h]
 %\begin{center}
 
@@ -274,6 +290,7 @@ Now let's look at the results between softmax and $\epsilon$-greedy. As stated i
 	\includegraphics[scale=0.4]{softmax_vs_egreedy}
 	\captionof{figure}{Q-learning $\epsilon$-greedy and softmax action selection}
 \end{center}
+%what can we say here?
 %\begin{figure}[h]
 %\begin{center}
 
@@ -283,38 +300,34 @@ Now let's look at the results between softmax and $\epsilon$-greedy. As stated i
 
 %\end{figure}
 The figure shows that both softmax and $\epsilon$-greedy action selection yield similar results. Therefore, either can be used. 
-\subsection*{Effect of discount rates on learning}
-\subsubsection*{Q-learning}
-\includegraphics[scale=0.25]{discount_rates_qlearning}
-\subsection*{Different initialization for Q-learning}
-It was advised to initialize the grid optimistically, when performing Q-learning. When initializing a grid optimistically, it is interesting to see what happens when a grid is not optimistically initialized. The values chosen are 15, 10, 5, 0 and -5. To see the effect of learning, the $\epsilon$-value was either 0 or 0.1. The figure below shows the results of $\epsilon$ value 0.1.
+%\subsection*{Effect of discount rates on learning}
+%\subsubsection*{Q-learning}
+%\includegraphics[scale=0.25]{discount_rates_qlearning}
+
+
+\subsection*{Learning types}
+Aside from Q-learning, Sarsa and on-policy Monte Carlo were implemented. It is interesting to see the difference in performance between the algorithms. The results are shown in the figure below.
 
 \begin{center}
-	\includegraphics[scale=0.4]{q_learnin_diff_init_epsilon_0_1}
-	\captionof{figure}{Q-learning with different initialization values and $\epsilon$ is 0.1}
+	\includegraphics[scale=0.4]{learning_types}
+	\captionof{figure}{Different learning types set out against one another}
 \end{center}
 
 %\begin{figure}[h]
 %\begin{center}
-%\includegraphics[scale=0.4]{q_learnin_diff_init_epsilon_0_1}
-%\caption{Q-learning with different initialization values and $\epsilon$ is 0.1}
+
+%\includegraphics[scale=0.4]{learning_types}
+%\caption{Different learning types set out against one another}
 %\end{center}
 %\end{figure}
-
-Now let's analyse the same initialization values with an $\epsilon$-value of 0.
-\begin{center}
-	\includegraphics[scale=0.4]{q_learning_diff_init_epsilon_0}
-	\captionof{figure}{Q-learning with different initialization values and $\epsilon$ is 0}
-\end{center}
-
-%\begin{figure}[h]
-%\begin{center}
-%\includegraphics[scale=0.4]{q_learning_diff_init_epsilon_0}
-%\caption{Q-learning with different initialization values and $\epsilon$ is 0}
-%\end{center}
-%\end{figure}
+The figure shows that all algorithms converge. Q-learning and Sarsa both converge with almost the same speed. On-policy Monte Carlo also converges quickly, but it starts with the worst Q-values. It also shows that of all algorithms, on-policy Monte Carlo converges to the least optimal Q-values. %explain why
+%\subsection*{Sarsa}
 
 \section*{Conclusion}
+Q-learning is an effective method to learn the Q-values of the states of environments. 
+
+
+After seeing the results, it can be concluded that the use of both Monte Carlo methods as well a temporal difference methods converge quickly. However, temporal difference methods outperform on-policy Monte Carlo. Of the temporal difference methods, Q-learning outperforms Sarsa as well. The differences are minimal, but they are there. Nevertheless, both converge to almost the same result. This leads to the conclusion that either Sarsa or Q-learning can be implemented, whatever the requirements, and the same results may be expected.
 
 \section*{Files attached}
 \begin{itemize}
